Changes to about me page

--- a/client/src/app/pages/about/about.component.html
+++ b/client/src/app/pages/about/about.component.html
@@ -8,8 +8,8 @@
       <p class="lead">
         <br>
         Hi there! I’m Abdul Shukor from Toronto, Canada. I have done  <strong>software engineering technology </strong> three years program at
-          Centennial College. I  graduated  in 2019-04 with
-           <strong>honours designation</strong>. In addition, I am <strong> ISTQB Certfied Tester</strong>. I am a passionate individual who is driven by curiosity and a desire to learn, embracing
+          Centennial College with
+           <strong>honours designation</strong>. In addition, I am <strong> ISTQB Certfied Tester and ISTQB Agile Extension Certified Tester</strong>. I am a passionate individual who is driven by curiosity and a desire to learn, embracing
            inclusion and committed to leading high performing teams in a culture of excellence with integrity and has a
            practical approach to problem-solving and a drive to see things through to completion. Besides, I am a fast
            learner and an excellent listener. I have excellent interpersonal and communication skills and I am a very
@@ -23,20 +23,22 @@
      </p>
 
 
-    <li>Web Application and Android App Development: C#, Asp.net, .Net Core 2.1, JavaScript,
+    <li>Web Application Development: C#, Asp.net, .Net Core 2.1, JavaScript,
       Typescript, Java, HTML5/XML, JSON, CSS, Bootstrap, Web API,Restful API, Swagger, Postman, Agile Methodologies, and UML language skills.
     </li>
     <li>Web API, Restful API, Swagger, Postman</li>
     <li> Apigee Edge: API Proxy, API Traffic management, Drupal Developer Portal,
       Authentication, API analytics, MicroGateway, and API Security. </li>
-    <li>Databases: Oracle SQL, PL/SQL, MySQL, Microsoft SQL Server.</li>
+    <li>Databases: Oracle SQL, PL/SQL, MySQL, Microsoft SQL Server, MongoDB.</li>
     <li>AWS development: EC2, Lambda, Elastic Beanstalk, S3, RDS, DynamoDB, Route 53, IAM, CloudWatch.</li>
     <li>Business Intelligence: Data Mining, SSIS, SSRS, SSAS, ETL.</li>
     <li>Web Application Security: Software Security, Security Strategies in Web Applications.</li>
     <li>Microsoft Office: Excel, Word, PowerPoint, Access. </li>
-    <li>Software Testing & Quality: Selenium, TestNG, Maven, Jenkins.</li>
-    <li> Software Methodologies: Agile Methodologies and UML language skills.</li>
-    <li>Operating Systems: Unix/Linux, Windows.</li>
+    <li>Automation Testing: Selenium Web Driver, Selenium Grid, JUnit, Maven, TestNG, Jenkins, Cucumber, QTP, Postman and JSON.</li>
+    <li> Web Testing tools: Firebug, Chropath, Xpath, DOM Inspector</li>
+    <li>Testing & Management tools:JIRA, Confluence</li>
+    <li> Software Methodologies: Agile Scrum, Waterfall, and UML language skills.</li>
+    <li>Operating Systems: Windows, UNIX, Mac, MS-DOS</li>
     <li> Version Control: Git, GitHub.</li>
     <li> Basics of Computer Networking. </li>
     <li>Statistical Analysis System (SAS).</li>
@@ -45,14 +47,14 @@
     <li>Development Tools: Microsoft Expression Web, Visual Studio, Visual Studio Code, Android Studio,
     Eclipse, Visual Paradigm, Visio, IntelliJ.</li>
     <li>Microsoft Office: MS Word, MS Excel, MS PowerPoint, MS Access</li>
-    <li>JIRA</li>
 
 
 
      <h5 class="display-6">I have done the follwoing professional Certificates &nbsp;<i class="fa fa-certificate" aria-hidden="true"></i></h5>
          <ol>
-          <li><strong>ISTQB Certified Tester (July. 2019)</strong>&nbsp;<img src="\assets\images\istqb.jpg" height="25" width="65" />
+          <li><strong>ISTQB Certified Tester, CTFL (2019)</strong>
           </li>
+          <li><strong>ISTQB Agile Extension Certified Tester (2019)</strong></li>
           <li>C# (Completed, Dec. 2017 Udemy)</li>
           <li>Oracle SQL (Completed,  May. 2017 Udemy)</li>
           <li>Oracle PL/SQL (Completed, Nov. 2017 Udemy)</li>
@@ -60,6 +62,24 @@
           <li>Selenium WebDriver with Java - Basics to Advanced (Completed,  Aug. 2018 Udemy) </li>
           <li>Data Structure and Algorithms (using Java) (Completed Apr. 2019 Udemy)</li>
         </ol>
+        <h4 class= display-5><b>Some of the major courses that I have studied
+          in Centennial College. </b></h4>
+        <p class="lead"> <strong>[Programming 1], [Software Engineering Fundament],
+          [Web Interface Design], [Introduction To Database], [Programming 2],
+          [Client-Side Web Development]
+          , [Software Engineering Methodologies I], [Unix/Linux Operating Systems],
+          [Advanced Database Concepts], [Java Programming], [Web Application Development]
+          , [Object Oriented Software Engineering], [Adv. Bus. Communications],
+          [Fundamentals of Comp Networks], [IT Project Management], [Business and ICT],
+          [Programming 3], [Mobile Application Development], [Software Testing & Quality],
+          [Software Development Project 1], [Java EE Programming], [API Engineering & Cloud Comp],
+          [Software Security], [Data Warehouse & Mining – HCIS], [Clinical Wkflow & IT Solutions],
+          [Data Structures and Algorithms], [Emerging Technologies], [Software Development
+          Project 2], [Systems Integration]
+        </strong>
+
+           </p>
+
      <!--the button for downloading my resume-->
 <h5>Download my updated resume</h5>
 <a href="/assets/documents/abdul_shukor_resume.pdf" download><button class="btn btn-outline-primary"><i class="fa fa-download"></i>&nbsp; Resume</button></a>
