update about page

--- a/client/src/app/pages/about/about.component.html
+++ b/client/src/app/pages/about/about.component.html
@@ -18,35 +18,35 @@
       </p>
       <p class="lead">
           I have done several academic projects throughout the program in the Centennial College, some of them I listed in the Projects page. During the
-          program and implementation of these projects I obtained knowledge on the following Technical skills.
+          program and implementation of these projects I obtained knowledge on the following Technical skills
 
      </p>
 
 
     <li>Web Application Development: C#, Asp.net, .Net Core 2.1, JavaScript,
-      Typescript, Java, HTML5/XML, JSON, CSS, Bootstrap, Web API,Restful API, Swagger, Postman, Agile Methodologies, and UML language skills.
+      Typescript, Java, HTML5/XML, JSON, CSS, Bootstrap, Web API,Restful API, &nbsp; &nbsp; &nbsp; Swagger, Postman, Agile Methodologies, and UML language skills
     </li>
-    <li>Web API, Restful API, Swagger, Postman</li>
+    <li> Restful API, Swagger, Postman</li>
     <li> Apigee Edge: API Proxy, API Traffic management, Drupal Developer Portal,
-      Authentication, API analytics, MicroGateway, and API Security. </li>
-    <li>Databases: Oracle SQL, PL/SQL, MySQL, Microsoft SQL Server, MongoDB.</li>
-    <li>AWS development: EC2, Lambda, Elastic Beanstalk, S3, RDS, DynamoDB, Route 53, IAM, CloudWatch.</li>
-    <li>Business Intelligence: Data Mining, SSIS, SSRS, SSAS, ETL.</li>
+      Authentication, API analytics, MicroGateway, and API Security </li>
+    <li>Databases: Oracle SQL, PL/SQL, MySQL, Microsoft SQL Server, MongoDB </li>
+    <li>AWS development: EC2, Lambda, Elastic Beanstalk, S3, RDS, DynamoDB, Route 53, IAM, CloudWatch </li>
+    <li>Business Intelligence: Data Mining, SSIS, SSRS, SSAS, ETL</li>
     <li>Web Application Security: Software Security, Security Strategies in Web Applications.</li>
-    <li>Microsoft Office: Excel, Word, PowerPoint, Access. </li>
-    <li>Automation Testing: Selenium Web Driver, Selenium Grid, JUnit, Maven, TestNG, Jenkins, Cucumber, QTP, Postman and JSON.</li>
+    <li>Microsoft Office: Excel, Word, PowerPoint, Access </li>
+    <li>Automation Testing: Selenium Web Driver, Selenium Grid, JUnit, Maven, TestNG, Jenkins, Cucumber, QTP, Postman and JSON </li>
     <li> Web Testing tools: Firebug, Chropath, Xpath, DOM Inspector</li>
     <li>Testing & Management tools:JIRA, Confluence</li>
-    <li> Software Methodologies: Agile Scrum, Waterfall, and UML language skills.</li>
+    <li> Software Methodologies: Agile Scrum, Waterfall, and UML language skills</li>
     <li>Operating Systems: Windows, UNIX, Mac, MS-DOS</li>
-    <li> Version Control: Git, GitHub.</li>
-    <li> Basics of Computer Networking. </li>
-    <li>Statistical Analysis System (SAS).</li>
+    <li> Version Control: Git</li>
+    <li> Basics of Computer Networking </li>
+    <li>Statistical Analysis System (SAS)</li>
     <li>Project Management: WBS, Budget and Schedule, Stakeholders Management Plan, Quality Management Plan,
-      Risk Management Plan.</li>
+      Risk Management Plan</li>
+      <li>Microsoft Office: MS Word, MS Excel, MS PowerPoint, MS Access</li>
     <li>Development Tools: Microsoft Expression Web, Visual Studio, Visual Studio Code, Android Studio,
-    Eclipse, Visual Paradigm, Visio, IntelliJ.</li>
-    <li>Microsoft Office: MS Word, MS Excel, MS PowerPoint, MS Access</li>
+    Eclipse, Visual Paradigm, Visio, IntelliJ</li>
 
 
 
@@ -55,34 +55,89 @@
           <li><strong>ISTQB Certified Tester, CTFL (2019)</strong>
           </li>
           <li><strong>ISTQB Agile Extension Certified Tester (2019)</strong></li>
-          <li>C# (Completed, Dec. 2017 Udemy)</li>
-          <li>Oracle SQL (Completed,  May. 2017 Udemy)</li>
-          <li>Oracle PL/SQL (Completed, Nov. 2017 Udemy)</li>
-          <li>Java (Completed, Feb. 2019 Udemy)</li>
-          <li>Selenium WebDriver with Java - Basics to Advanced (Completed,  Aug. 2018 Udemy) </li>
-          <li>Data Structure and Algorithms (using Java) (Completed Apr. 2019 Udemy)</li>
+          <li>C# (Completed 2017 Udemy)</li>
+          <li>Oracle SQL (Completed 2017 Udemy)</li>
+          <li>Oracle PL/SQL (Completed 2017 Udemy)</li>
+          <li>Java (Completed 2019 Udemy)</li>
+          <li>Selenium WebDriver with Java - Basics to Advanced (Completed 2018 Udemy) </li>
+          <li>Data Structure and Algorithms (using Java) (Completed 2019 Udemy)</li>
         </ol>
-        <h4 class= display-5><b>Some of the major courses that I have studied
-          in Centennial College. </b></h4>
-        <p class="lead"> <strong>[Programming 1], [Software Engineering Fundament],
-          [Web Interface Design], [Introduction To Database], [Programming 2],
-          [Client-Side Web Development]
-          , [Software Engineering Methodologies I], [Unix/Linux Operating Systems],
-          [Advanced Database Concepts], [Java Programming], [Web Application Development]
-          , [Object Oriented Software Engineering], [Adv. Bus. Communications],
-          [Fundamentals of Comp Networks], [IT Project Management], [Business and ICT],
-          [Programming 3], [Mobile Application Development], [Software Testing & Quality],
-          [Software Development Project 1], [Java EE Programming], [API Engineering & Cloud Comp],
-          [Software Security], [Data Warehouse & Mining – HCIS], [Clinical Wkflow & IT Solutions],
-          [Data Structures and Algorithms], [Emerging Technologies], [Software Development
-          Project 2], [Systems Integration]
-        </strong>
 
-           </p>
+
+           <div class="container">
+              <h3>Some of the major courses that I have studied
+                  in Centennial College.</h3>
+              <table class="table table-bordered">
+                <thead>
+                  <tr>
+                    <th>CourseName</th>
+                    <th>CourseName</th>
+                    <th>CourseName</th>
+                    <th>CourseName</th>
+
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>Programming 1 </td>
+                    <td> Software Engineering Fundament </td>
+                    <td> Web Interface Design </td>
+                    <td> Introduction To Database </td>
+
+                  </tr>
+                  <tr>
+                    <td> Programming 2 </td>
+                    <td> Client-Side Web Development </td>
+                    <td> Software Engineering Methodologies I </td>
+                    <td> Unix/Linux Operating Systems </td>
+
+                  </tr>
+                  <tr>
+                    <td> Advanced Database Concepts </td>
+                    <td> Java Programming </td>
+                    <td> Web Application Development </td>
+                    <td> Object Oriented Software Engineering </td>
+
+                  </tr>
+                  <tr>
+                      <td> Adv. Bus. Communications </td>
+                      <td> Software Development Project 1 </td>
+                      <td> Java EE Programming </td>
+                      <td> API Engineering & Cloud Comp </td>
+
+                    </tr>
+                    <tr>
+                        <td> Software Testing & Quality </td>
+                        <td> Fundamentals of Comp Networks </td>
+                        <td> IT Project Management </td>
+                        <td> Business and ICT </td>
+
+                      </tr>
+                      <tr>
+                          <td> Programming 3 </td>
+                          <td> Mobile Application Development </td>
+                          <td> Software Security </td>
+                          <td> Data Warehouse & Mining – HCIS </td>
+
+                        </tr>
+                        <tr>
+                            <td> Clinical Wkflow & IT Solutions </td>
+                            <td> Data Structures and Algorithms </td>
+                            <td> Emerging Technologies </td>
+                            <td> Software Development Project 2 </td>
+                          </tr>
+                          <tr>
+                              <td> Systems Integration </td>
+
+                            </tr>
+                </tbody>
+              </table>
+            </div>
+
 
      <!--the button for downloading my resume-->
 <h5>Download my updated resume</h5>
-<a href="/assets/documents/abdul_shukor_resume.pdf" download><button class="btn btn-outline-primary"><i class="fa fa-download"></i>&nbsp; Resume</button></a>
+<a href="/assets/documents/Abdul Shukor.pdf" download><button class="btn btn-outline-primary"><i class="fa fa-download"></i>&nbsp; Resume</button></a>
 <hr class="my-9" />
   </div>
 </div>
