--- a/client/src/app/pages/services/services.component.html
+++ b/client/src/app/pages/services/services.component.html
@@ -11,16 +11,16 @@
         <!-- <h4 class=display-5><b>I provide the following services.</b></h4> -->
         <div class="row">
           <!--Grid column-->
-      <div class="col-lg-4 col-md-12 mb-4">
+      <div class="col-lg-3 col-md-12 mb-3">
 
           <!--Image 1-->
           <div class="view overlay z-depth-1-half">
                   <a routerLink="/services">
-              <img src="\assets\images\mobile.jpg" class="img-fluid"
+              <img src="\assets\images\ma.jpg" class="img-fluid"
                   alt="">
                   <div class="mask rgba-white-light"></div>
               </a>
-              <p class="lead">Android Apps development</p>
+              <p class="lead">Manual Testing</p>
           </div>
       </div>
 
@@ -32,7 +32,7 @@
                   alt="">
                   <div class="mask rgba-white-light"></div>
               </a>
-              <p class="lead">Software Testing & Quality, Selenium Automation Testing</p>
+              <p class="lead"> Automation Testing</p>
 
           </div>
       </div>
