updated about page

--- a/client/src/app/pages/about/about.component.html
+++ b/client/src/app/pages/about/about.component.html
@@ -9,7 +9,7 @@
         <br>
         Hi there! I’m Abdul Shukor from Toronto, Canada. I have done  <strong>software engineering technology </strong> three years program at
           Centennial College with
-           <strong>honours designation</strong>. In addition, I am <strong> ISTQB Certfied Tester and ISTQB Agile Extension Certified Tester</strong>. I am a passionate individual who is driven by curiosity and a desire to learn, embracing
+           <strong>honours designation</strong>. Also, I am <strong> ISTQB Certified Tester</strong> and <strong> ISTQB Agile Extension Certified Tester</strong>. I am a passionate individual who is driven by curiosity and a desire to learn, embracing
            inclusion and committed to leading high performing teams in a culture of excellence with integrity and has a
            practical approach to problem-solving and a drive to see things through to completion. Besides, I am a fast
            learner and an excellent listener. I have excellent interpersonal and communication skills and I am a very
@@ -17,40 +17,41 @@
 
       </p>
       <p class="lead">
-          I have done several academic projects throughout the program in the Centennial College, some of them I listed in the Projects page. During the
-          program and implementation of these projects I obtained knowledge on the following Technical skills
+          I have done several academic projects throughout the program in the Centennial College, some of them I listed on the Projects page. During the
+          program and implementation of these projects, I obtained knowledge on the following Technical skills
 
      </p>
 
+     <ul>
+        <li>AWS Development: EC2, Lambda, Elastic Beanstalk, S3, RDS, DynamoDB, Route 53, IAM, CloudWatch </li>
+        <li>Languages & Scripting languages: Java Scripting, Core Java, C#, .Net Core, Asp.net, Angular, JavaScript, TypeScript, Node.js,
+      Express.js and SQL
+      <li>Web Technologies: Bootstrap, HTML5, XML, CSS, DOM</li>
+    <li> Restful API Development and Testing: XML, JSON, Swagger, Postman</li>
+    <li>Databases: Oracle SQL, PL/SQL, MySQL, Microsoft SQL Server, MongoDB </li>
 
-    <li>Web Application Development: C#, Asp.net, .Net Core 2.1, JavaScript,
-      Typescript, Java, HTML5/XML, JSON, CSS, Bootstrap, Web API,Restful API, &nbsp; &nbsp; &nbsp; Swagger, Postman, Agile Methodologies, and UML language skills
-    </li>
-    <li> Restful API, Swagger, Postman</li>
+    <li>Automation Testing: Selenium Web Driver, Selenium Grid, JUnit, Maven, TestNG, Jenkins, Cucumber, QTP, Postman and JSON </li>
+     <li> Web Testing tools: Firebug, Chropath, Xpath, DOM Inspector</li>
+     <li>Testing & Management tools: JIRA, Confluence</li>
+     <li> Software Methodologies: Agile Scrum, Waterfall, and UML language skills</li>
+     <li>Web Application Security: Software Security, Security Strategies in Web Applications.</li>
     <li> Apigee Edge: API Proxy, API Traffic management, Drupal Developer Portal,
       Authentication, API analytics, MicroGateway, and API Security </li>
-    <li>Databases: Oracle SQL, PL/SQL, MySQL, Microsoft SQL Server, MongoDB </li>
-    <li>AWS development: EC2, Lambda, Elastic Beanstalk, S3, RDS, DynamoDB, Route 53, IAM, CloudWatch </li>
-    <li>Business Intelligence: Data Mining, SSIS, SSRS, SSAS, ETL</li>
-    <li>Web Application Security: Software Security, Security Strategies in Web Applications.</li>
-    <li>Microsoft Office: Excel, Word, PowerPoint, Access </li>
-    <li>Automation Testing: Selenium Web Driver, Selenium Grid, JUnit, Maven, TestNG, Jenkins, Cucumber, QTP, Postman and JSON </li>
-    <li> Web Testing tools: Firebug, Chropath, Xpath, DOM Inspector</li>
-    <li>Testing & Management tools:JIRA, Confluence</li>
-    <li> Software Methodologies: Agile Scrum, Waterfall, and UML language skills</li>
-    <li>Operating Systems: Windows, UNIX, Mac, MS-DOS</li>
+      <li>Operating Systems: Windows, UNIX, Mac, MS-DOS</li>
+      <li>Business Intelligence: Data Mining, SSIS, SSRS, SSAS, ETL</li>
     <li> Version Control: Git</li>
     <li> Basics of Computer Networking </li>
     <li>Statistical Analysis System (SAS)</li>
     <li>Project Management: WBS, Budget and Schedule, Stakeholders Management Plan, Quality Management Plan,
       Risk Management Plan</li>
       <li>Microsoft Office: MS Word, MS Excel, MS PowerPoint, MS Access</li>
-    <li>Development Tools: Microsoft Expression Web, Visual Studio, Visual Studio Code, Android Studio,
+    <li>Development and Automation Testing Tools: Microsoft Expression Web, Visual Studio, Visual Studio Code, Android Studio,
     Eclipse, Visual Paradigm, Visio, IntelliJ</li>
+  </ul>
 
 
 
-     <h5 class="display-6">I have done the follwoing professional Certificates &nbsp;<i class="fa fa-certificate" aria-hidden="true"></i></h5>
+     <h5 class="display-6">Professional Certificates &nbsp;<i class="fa fa-certificate" aria-hidden="true"></i></h5>
          <ol>
           <li><strong>ISTQB Certified Tester, CTFL (2019)</strong>
           </li>
@@ -66,14 +67,14 @@
 
            <div class="container">
               <h3>Some of the major courses that I have studied
-                  in Centennial College.</h3>
+                  at Centennial College.</h3>
               <table class="table table-bordered">
                 <thead>
                   <tr>
-                    <th>CourseName</th>
-                    <th>CourseName</th>
-                    <th>CourseName</th>
-                    <th>CourseName</th>
+                    <th>Course Title</th>
+                    <th>Course Title</th>
+                    <th>Course Title</th>
+                    <th>Course Title</th>
 
                   </tr>
                 </thead>
@@ -96,7 +97,7 @@
                     <td> Advanced Database Concepts </td>
                     <td> Java Programming </td>
                     <td> Web Application Development </td>
-                    <td> Object Oriented Software Engineering </td>
+                    <td> Object-Oriented Software Engineering </td>
 
                   </tr>
                   <tr>
@@ -121,7 +122,7 @@
 
                         </tr>
                         <tr>
-                            <td> Clinical Wkflow & IT Solutions </td>
+                            <td> Clinical Workflow & IT Solutions </td>
                             <td> Data Structures and Algorithms </td>
                             <td> Emerging Technologies </td>
                             <td> Software Development Project 2 </td>
