--- a/client/src/app/pages/about/about.component.html
+++ b/client/src/app/pages/about/about.component.html
@@ -35,11 +35,11 @@
      <li>Testing & Management tools: JIRA, Confluence</li>
      <li> Software Methodologies: Agile Scrum, Waterfall, and UML language skills</li>
      <li>Web Application Security: Software Security, Security Strategies in Web Applications.</li>
-    <li> Apigee Edge: API Proxy, API Traffic management, Drupal Developer Portal,
+     <li> Version Control: Git</li>
+     <li> Apigee Edge: API Proxy, API Traffic management, Drupal Developer Portal,
       Authentication, API analytics, MicroGateway, and API Security </li>
       <li>Operating Systems: Windows, UNIX, Mac, MS-DOS</li>
       <li>Business Intelligence: Data Mining, SSIS, SSRS, SSAS, ETL</li>
-    <li> Version Control: Git</li>
     <li> Basics of Computer Networking </li>
     <li>Statistical Analysis System (SAS)</li>
     <li>Project Management: WBS, Budget and Schedule, Stakeholders Management Plan, Quality Management Plan,
@@ -51,7 +51,7 @@
 
 
 
-     <h5 class="display-6">Professional Certificates &nbsp;<i class="fa fa-certificate" aria-hidden="true"></i></h5>
+     <h4 class="display-6">Professional Certificates &nbsp;<i class="fa fa-certificate" aria-hidden="true"></i></h4>
          <ol>
           <li><strong>ISTQB Certified Tester, CTFL (2019)</strong>
           </li>
@@ -66,8 +66,9 @@
 
 
            <div class="container">
-              <h3>Some of the major courses that I have studied
-                  at Centennial College.</h3>
+          &nbsp;
+              <h4>Some of the major courses that I have studied at Centennial College.</h4>
+              &nbsp;
               <table class="table table-bordered">
                 <thead>
                   <tr>
@@ -102,7 +103,7 @@
                   </tr>
                   <tr>
                       <td> Adv. Bus. Communications </td>
-                      <td> Software Development Project 1 </td>
+                      <td> Software Development Project 1</td>
                       <td> Java EE Programming </td>
                       <td> API Engineering & Cloud Comp </td>
 
@@ -137,7 +138,7 @@
 
 
      <!--the button for downloading my resume-->
-<h5>Download my updated resume</h5>
+<h4>Download my updated resume</h4>
 <a href="/assets/documents/Abdul Shukor.pdf" download><button class="btn btn-outline-primary"><i class="fa fa-download"></i>&nbsp; Resume</button></a>
 <hr class="my-9" />
   </div>
