--- a/client/src/app/pages/services/services.component.html
+++ b/client/src/app/pages/services/services.component.html
@@ -150,7 +150,7 @@
           </a>
 
       </div>
-      <p class="lead">Web API and Restful API Development</p>
+      <p class="lead">Restful API Development and Automation Testing</p>
 
   </div>
      </div>
