Updated service page

--- a/client/src/app/pages/services/services.component.html
+++ b/client/src/app/pages/services/services.component.html
@@ -1,164 +1,59 @@
-<!--Abdul Shukor
-   StudentID300919831
-   Date:2019-03-30-->
 <div class="container">
     <div class="jumbotron">
+        <br>
+        <br>
 
-      <br>
-        <h4> <i class="fa fa-building" aria-hidden="true"></i> I provide various types of services. Some of those services are:</h4>
-      <br>
 
-        <!-- <h4 class=display-5><b>I provide the following services.</b></h4> -->
-        <div class="row">
-          <!--Grid column-->
-      <div class="col-lg-3 col-md-12 mb-3">
-
-          <!--Image 1-->
-          <div class="view overlay z-depth-1-half">
-                  <a routerLink="/services">
-              <img src="\assets\images\ma.jpg" class="img-fluid"
-                  alt="">
-                  <div class="mask rgba-white-light"></div>
-              </a>
-              <p class="lead">Manual Testing</p>
+        <div class="card-deck">
+            <div class="card">
+             <!--<img class="card-img-top" src="..." alt="Card image cap">-->
+              <div class="card-body">
+                <h5 class="card-title">Full STLC SUPPORT</h5>
+                <p class="card-text"> Achive high software qaulity on every step of the software engineering process.</p>
+              </div>
+            </div>
+            <div class="card">
+             <!--<img class="card-img-top" src="..." alt="Card image cap">-->
+             <div class="card-body">
+                <h5 class="card-title">MANUAL TESTING </h5>
+                <p class="card-text"> Ensure your software application is fully-compliant with defined business requirements.</p>
+              </div>
+            </div>
+            <div class="card">
+             <!--<img class="card-img-top" src="..." alt="Card image cap">-->
+             <div class="card-body">
+                <h5 class="card-title">TEST AUTOMATION</h5>
+                <p class="card-text">Help you to automate your testing needs with core expertise on all
+                  industy-leading tools like Selenium,QTP,etc.</p>
+              </div>
+            </div>
           </div>
-      </div>
+          <div class="card-deck">
+              <div class="card">
+             <!--<img class="card-img-top" src="..." alt="Card image cap">-->
+             <div class="card-body">
+                  <h5 class="card-title">SECURITY TESTING</h5>
+                  <p class="card-text">Testing to ensure the application are secure against any valnerability and sql Injections.</p>
+                </div>
+              </div>
+              <div class="card">
+             <!--<img class="card-img-top" src="..." alt="Card image cap">-->
+             <div class="card-body">
+                  <h5 class="card-title">USABILITY TESTING</h5>
+                  <p class="card-text">Identifiy all the usability issues begore the application is released
+                    to the end-users.</p>
+                </div>
+              </div>
+              <div class="card">
+             <!--<img class="card-img-top" src="..." alt="Card image cap">-->
+             <div class="card-body">
+                  <h5 class="card-title">REST API TESTIGN </h5>
+                  <p class="card-text"></p>
+                </div>
+              </div>
+            </div>
 
-      <div class="col-lg-4 col-md-6 mb-4">
-          <!--Image 2-->
-          <div class="view overlay z-depth-1-half">
-                  <a routerLink="/services">
-                          <img src="\assets\images\sele.jpg" class="img-fluid"
-                  alt="">
-                  <div class="mask rgba-white-light"></div>
-              </a>
-              <p class="lead"> Automation Testing</p>
 
-          </div>
-      </div>
-          <!--Grid column-->
-      <div class="col-lg-4 col-md-6 mb-4">
 
-          <!--Image 3-->
-          <div class="view overlay z-depth-1-half">
-                  <a routerLink="/services">
-
-              <img src="\assets\images\bi.jpg" class="img-fluid"
-                  alt="">
-
-                  <div class="mask rgba-white-light"></div>
-              </a>
-              <p class="lead">Business Intelligence</p>
-
-          </div>
-
-      </div>
-      <!--Grid column-->
-        <!--Grid column-->
-      <div class="col-lg-4 col-md-12 mb-4">
-
-          <!--Image 4-->
-          <div class="view overlay z-depth-1-half">
-                  <a routerLink="/services">
-
-              <img src="\assets\images\aws.jpg" class="img-fluid"
-                  alt="">
-
-                  <div class="mask rgba-white-light"></div>
-              </a>
-              <p class="lead">AWS development</p>
-          </div>
-
-      </div>
-      <!--Grid column-->
-      <!--Grid column-->
-      <div class="col-lg-4 col-md-6 mb-4">
-
-          <!--Image 5-->
-          <div class="view overlay z-depth-1-half">
-                  <a routerLink="/services">
-
-              <img src="\assets\images\web.jpg" class="img-fluid"
-                  alt="">
-
-                  <div class="mask rgba-white-light"></div>
-              </a>
-              <p class="lead">Web Application Development</p>
-
-          </div>
-
-      </div>
-      <!--Grid column-->
-      <!--Grid column-->
-      <div class="col-lg-3 col-md-6 mb-4">
-
-          <!--Image 6-->
-          <div class="view overlay z-depth-1-half bg-white">
-                  <a routerLink="/services">
-
-              <img src="/assets\images\db.jpg " class="img-fluid"
-                  alt="">
-                  <div class="mask rgba-white-light"></div>
-              </a>
-
-          </div>
-          <p class="lead">Database Development (Oracle SQL, PL/SQL, MySQL, Microsoft SQL Server and MongoDB)</p>
-
-      </div>
-      <!--Grid column-->
-
-      <div class="col-lg-4 col-md-6 mb-4">
-
-          <!--Image 6-->
-          <div class="view overlay z-depth-1-half">
-                  <a routerLink="/services">
-
-              <img src="\assets\images\apigee.jpg " class="img-fluid"
-                  alt="">
-                  <div class="mask rgba-white-light"></div>
-              </a>
-              <p class="lead">Apigee API Security Management</p>
-
-          </div>
-
-      </div>
-      <div class="col-lg-4 col-md-6 mb-4">
-
-        <!--Image 6-->
-        <div class="view overlay z-depth-1-half">
-                <a routerLink="/services">
-
-            <img src="\assets\images\mean.jpg " class="img-fluid"
-                alt="">
-                <div class="mask rgba-white-light"></div>
-            </a>
-            <p class="lead">Mean Stack Development</p>
-
-        </div>
-
-    </div>
-
-    <div class="col-lg-4 col-md-6 mb-4">
-
-      <!--Image 6-->
-      <div class="view overlay z-depth-1-half">
-              <a routerLink="/services">
-
-          <img src="\assets\images\api.jpg " class="img-fluid"
-              alt="">
-              <div class="mask rgba-white-light"></div>
-          </a>
-
-      </div>
-      <p class="lead">Restful API Development and Automation Testing</p>
-
-  </div>
-     </div>
     </div>
 </div>
-
-
-
-
-
-
