UPDATED SERVICE PAGE

--- a/client/src/app/pages/services/services.component.html
+++ b/client/src/app/pages/services/services.component.html
@@ -8,7 +8,7 @@
             <div class="card">
              <!--<img class="card-img-top" src="..." alt="Card image cap">-->
               <div class="card-body">
-                <h5 class="card-title">Full STLC SUPPORT</h5>
+                <h5 class="card-title">FULL STLC SUPPORT</h5>
                 <p class="card-text"> Achive high software qaulity on every step of the software engineering process.</p>
               </div>
             </div>
