UPDATE SERVICE PAGE

--- a/client/src/app/pages/services/services.component.html
+++ b/client/src/app/pages/services/services.component.html
@@ -47,7 +47,7 @@
               <div class="card">
              <!--<img class="card-img-top" src="..." alt="Card image cap">-->
              <div class="card-body">
-                  <h5 class="card-title">REST API TESTIGN </h5>
+                  <h5 class="card-title">REST API TESTING </h5>
                   <p class="card-text"></p>
                 </div>
               </div>
