updated service page

--- a/client/src/app/pages/services/services.component.html
+++ b/client/src/app/pages/services/services.component.html
@@ -8,23 +8,23 @@
             <div class="card">
              <!--<img class="card-img-top" src="..." alt="Card image cap">-->
               <div class="card-body">
-                <h5 class="card-title">FULL STLC SUPPORT</h5>
-                <p class="card-text"> Achive high software qaulity on every step of the software engineering process.</p>
+                <h5 class="card-header text-center text-white bg-dark"><strong>STLC SUPPORT</strong> </h5>
+                <p class="card-text"> <strong> High software quality on every step of the software engineering process.</strong> </p>
               </div>
             </div>
             <div class="card">
              <!--<img class="card-img-top" src="..." alt="Card image cap">-->
              <div class="card-body">
-                <h5 class="card-title">MANUAL TESTING </h5>
-                <p class="card-text"> Ensure your software application is fully-compliant with defined business requirements.</p>
+                <h5 class="card-header text-center text-white bg-dark"><strong> MANUAL TESTING</strong>  </h5>
+                <p class="card-text"> <strong>your software application is fully-compliant with defined business requirements.</strong> </p>
               </div>
             </div>
             <div class="card">
              <!--<img class="card-img-top" src="..." alt="Card image cap">-->
              <div class="card-body">
-                <h5 class="card-title">TEST AUTOMATION</h5>
-                <p class="card-text">Help you to automate your testing needs with core expertise on all
-                  industy-leading tools like Selenium,QTP,etc.</p>
+                <h5 class="card-header text-center text-white bg-dark"><strong> TEST AUTOMATION</strong> </h5>
+                <p class="card-text"><strong> Help you to automate your testing needs with core expertise on all industry-leading tools like Selenium, QTP, etc.
+                  </strong> </p>
               </div>
             </div>
           </div>
@@ -32,27 +32,59 @@
               <div class="card">
              <!--<img class="card-img-top" src="..." alt="Card image cap">-->
              <div class="card-body">
-                  <h5 class="card-title">SECURITY TESTING</h5>
-                  <p class="card-text">Testing to ensure the application are secure against any valnerability and sql Injections.</p>
+                  <h5 class="card-header text-center text-white bg-dark"><strong> SECURITY TESTING</strong> </h5>
+                  <p class="card-text"><strong> Testing to ensure the application is secure against any vulnerability and SQL Injections.
+                    </strong> </p>
                 </div>
               </div>
               <div class="card">
              <!--<img class="card-img-top" src="..." alt="Card image cap">-->
              <div class="card-body">
-                  <h5 class="card-title">USABILITY TESTING</h5>
-                  <p class="card-text">Identifiy all the usability issues begore the application is released
-                    to the end-users.</p>
+                  <h5 class="card-header text-center text-white bg-dark"><strong> USABILITY TESTING</strong> </h5>
+                  <p class="card-text"><strong> Identify all the usability issues before the application is released to the end-users.
+                    </strong> </p>
                 </div>
               </div>
               <div class="card">
              <!--<img class="card-img-top" src="..." alt="Card image cap">-->
              <div class="card-body">
-                  <h5 class="card-title">REST API TESTING </h5>
-                  <p class="card-text"></p>
+                  <h5 class="card-header text-center text-white bg-dark"><strong> REST API TESTING </strong> </h5>
+                  <p class="card-text"><Strong>Testing Rest API with Postman.</Strong></p>
                 </div>
               </div>
+
+
             </div>
 
+<!-- second -->
+
+<div class="card-deck">
+  <div class="card">
+   <!--<img class="card-img-top" src="..." alt="Card image cap">-->
+    <div class="card-body">
+      <h5 class="card-header text-center text-white bg-dark"><strong> PERFORMANCE TESTING</strong> </h5>
+      <p class="card-text"><strong>  Testing for Speed, Stability, and Scalability to ensure the application performs well under stress and peak load.
+          </strong> </p>
+    </div>
+  </div>
+
+  <div class="card">
+   <!--<img class="card-img-top" src="..." alt="Card image cap">-->
+   <div class="card-body">
+      <h5 class="card-header text-center text-white bg-dark"><strong> MOBILE TESTING</strong>  </h5>
+      <p class="card-text"><strong>Mobile automation testing with an industry-leading tool like Appium.
+        </strong> </p>
+    </div>
+  </div>
+  <div class="card">
+   <!--<img class="card-img-top" src="..." alt="Card image cap">-->
+   <div class="card-body">
+      <h5 class="card-header text-center text-white bg-dark"><strong> TESTING FRAMEWORK </strong> </h5>
+      <p class="card-text"><strong> Data-Driven Framework, KeyWord Framework, Hybrid Framework, Page Object Model Framework.
+</strong> </p>
+    </div>
+  </div>
+</div>
 
 
     </div>
